--- a/quickstart/3.install_gaea.md
+++ b/quickstart/3.install_gaea.md
@@ -14,93 +14,15 @@
 
 1. #### 执行以下命令,创建一个[service]项目:
 ****
-`~/work/bin$ gaea new myproject --service`
+`~/work/bin$ gaea new hydraDemo --service`
 
 输出内容:
 ```sh
-启动 gaea ...
-创建文件: /home/my/work/src/myproject1/services.go 514
-创建文件: /home/my/work/src/myproject1/libs/order/orderlib.go 389
-创建文件: /home/my/work/src/myproject1/libs/order/sql.go 46
-创建文件: /home/my/work/src/myproject1/handlers/order.query.go 1128
-创建文件: /home/my/work/src/myproject1/handlers/order.query_test.go 1619
-创建文件: /home/my/work/src/myproject1/conf/conf.go 1073
-创建文件: /home/my/work/src/myproject1/main.go 715
-项目生成成功: /home/my/work/src/myproject
+[2018/03/06 09:19:00.956377][i][3f97ca0bf]启动 gaea ...
+[2018/03/06 09:19:00.956497][i][3f97ca0bf]创建文件: /home/yanglei/work/src/hydraDemo/main.go 140
+[2018/03/06 09:19:00.956531][i][3f97ca0bf]创建文件: /home/yanglei/work/src/hydraDemo/loader.go 338
+[2018/03/06 09:19:00.956594][i][3f97ca0bf]创建文件: /home/yanglei/work/src/hydraDemo/services/order/order.query.go 518
+[2018/03/06 09:19:00.956598][i][3f97ca0bf]项目生成成功: /home/yanglei/work/src/hydraDemo
 ```
-使用vscode或其它golang IDE可直接打开项目[/home/my/work/src/myproject1]进行开发
+使用vscode或其它golang IDE可直接打开项目[/home/my/work/src/hydraDemo]进行开发
 
-
-
-2. #### 执行以下命令,创建一个[web]项目:
-****
-`~/work/bin$ gaea new myproject2 --web`
-
-输出内容:
-```sh
-启动 gaea ...
-创建文件: /home/my/work/src/myproject2/main.go 729
-创建文件: /home/my/work/src/myproject2/routers.go 520
-创建文件: /home/my/work/src/myproject2/views/index.html 381
-创建文件: /home/my/work/src/myproject2/controllers/index.go 854
-创建文件: /home/my/work/src/myproject2/conf/conf.go 1073
-项目生成成功: /home/my/work/src/myproject2
-```
-
-3. #### 执行以下命令,创建一个包含[有服务接口的web]项目:
-****
-`~/work/bin$ gaea new myproject3 --mix`
-
-输出内容:
-
-```sh
-~/work/bin$ gaea new myproject3 --mix
-启动 gaea ...
-创建文件: /home/my/work/src/myproject3/main.go 729
-创建文件: /home/my/work/src/myproject3/routers.go 593
-创建文件: /home/my/work/src/myproject3/libs/order/sql.go 46
-创建文件: /home/my/work/src/myproject3/handlers/order.query_test.go 1619
-创建文件: /home/my/work/src/myproject3/views/index.html 381
-创建文件: /home/my/work/src/myproject3/controllers/index.go 854
-创建文件: /home/my/work/src/myproject3/libs/order/orderlib.go 389
-创建文件: /home/my/work/src/myproject3/handlers/order.query.go 1129
-创建文件: /home/my/work/src/myproject3/conf/conf.go 1073
-项目生成成功: /home/my/work/src/myproject3
-
-```
-
-###    run 命令
-> `new` 命令是使用最频繁的命令，该命令可以帮助开发者检测项目文件的变化并自动编译项目，重启hydra服务。在命令行下执行 `gaea run <hydra启动命令> -w <项目名称>` 
-
-`~/work/bin$ gaea run /monitor -r "zk://192.168.106.172" -t "*" -w myproject3`
-
-输出内容:
-
-```sh
-[2017/10/31 17:11:42.174153][i][808d7cdae]启动 gaea ...
-[2017/10/31 17:11:42.174225][i][808d7cdae]监控项目:/home/my/work/src/myproject3文件的变化...107-2-[run /monitor]
-[2017/10/31 17:11:42.174543][i][b36931392]开始编译hydra...
-[2017/10/31 17:11:42.290352][i][b36931392]hydra编译成功
-[2017/10/31 17:11:42.290463][i][b36931392]结束进程:hydra  [/monitor -r zk://192.168.106.172 -t * -d]
-[2017/10/31 17:11:42.290652][i][b36931392]开始编译/myproject3...
-[2017/10/31 17:11:47.742666][i][b36931392]/myproject3 编译成功
-[2017/10/31 17:11:47.742713][i][b36931392]-------------开始启动hydra-------------
-[2017/10/31 17:11:47.752903][i][1c32297ab]Listening on http://0.0.0.0:10160
-[2017/10/31 17:11:47.754209][i][aad9f6cf4]Connected to 192.168.106.172:2181
-[2017/10/31 17:11:47.761800][i][aad9f6cf4]Authenticated: id=170788807545718031, timeout=4000
-[2017/10/31 17:11:47.761838][i][aad9f6cf4]Re-submitting `0` credentials after reconnect
-[2017/10/31 17:11:48.753141][i][aad9f6cf4]启动 hydra server(*,zk)...
-[2017/10/31 17:11:48.772534][i][d07dc9004]notify(api):http头配置:0
-[2017/10/31 17:11:48.774768][i][d07dc9004]notify(api):静态文件:未配置
-[2017/10/31 17:11:48.781323][i][d07dc9004]notify(api):启用metrics
-[2017/10/31 17:11:48.781378][i][d07dc9004]Listening on http://0.0.0.0:8300
-[2017/10/31 17:11:49.281532][i][aad9f6cf4]启动成功:notify(api)(addr:http://192.168.5.71:8300,srvs:0)
-[2017/10/31 17:11:49.292769][i][c178f34d3]notify(rpc):启用metrics
-[2017/10/31 17:11:49.292791][i][c178f34d3]Listening on 0.0.0.0:8102
-[2017/10/31 17:11:51.319310][i][aad9f6cf4]启动成功:notify(rpc)(addr:192.168.5.71:8102,srvs:1)
-```
-
-
-
-
-注意：由于hydra启动需从注册中心(-r参数指定的地址)拉取服务器配置，所以以上项目未在注册中心配置前是不能运行成功的，成功运行以上项目请查看[服务器配置]章节
