修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -2,68 +2,67 @@
 hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果还没安装请查阅[gaea工具安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
 
 ### 1. 创建项目
-现在一切就绪我们就可以创建项目了，打开终端输入命令:`gaea new quickstart --service`
+现在一切就绪我们就可以创建项目了，打开终端输入命令:`gaea new hydraDemo --service`
 
 ```sh
 ~/work/bin$ gaea new quickstart --service
-[2017/11/01 14:04:12.218859][i][0f78b2435]启动 gaea ...
-[2017/11/01 14:04:12.218984][i][0f78b2435]创建文件: /home/my/work/src/quickstart/main.go
-[2017/11/01 14:04:12.219022][i][0f78b2435]创建文件: /home/my/work/src/quickstart/registry.go
-[2017/11/01 14:04:12.219078][i][0f78b2435]创建文件: /home/my/work/src/quickstart/services/myservice.go
-[2017/11/01 14:04:12.219122][i][0f78b2435]创建文件: /home/my/work/src/quickstart/conf/conf.go
-[2017/11/01 14:04:12.219128][i][0f78b2435]项目生成成功: /home/my/work/src/quickstart
+[2018/03/06 09:19:00.956377][i][3f97ca0bf]启动 gaea ...
+[2018/03/06 09:19:00.956497][i][3f97ca0bf]创建文件: /home/yanglei/work/src/hydraDemo/main.go 140
+[2018/03/06 09:19:00.956531][i][3f97ca0bf]创建文件: /home/yanglei/work/src/hydraDemo/loader.go 338
+[2018/03/06 09:19:00.956594][i][3f97ca0bf]创建文件: /home/yanglei/work/src/hydraDemo/services/order/order.query.go 518
+[2018/03/06 09:19:00.956598][i][3f97ca0bf]项目生成成功: /home/yanglei/work/src/hydraDemo
+```
 ```
 
-通过以上命令我们就创建了一个hydra的service项目，通过这个项目编写的代码可运行于除web应用(没有views目录)外的所有服务器如：http接口，rpc服务，定时任务，job consumer等，项目的目录结构如下:
+通过以上命令我们就创建了一个hydra的service项目，通过这个项目编写的代码可运行于http接口，rpc服务，定时任务，job consumer等，项目的目录结构如下:
 	
-	|-- conf
-	|   `-- conf.go                 ---配置文件
+	
 	|-- services                    ---服务目录
-	|   `-- myservice.go
+	|   --order
+	|      -- order.query.go
 	|-- main.go                     ---程序入口
-	|-- registry.go                 ---服务注册文件
+	|-- loader.go                   ---服务加载
 
 项目文件说明：
 
 
 |  文件路径  |  说明   |
 |:-------:|:-------:|
-|main.go|程序入口，通过GetWorker()向外暴露当前动态库提供的服务列表(GetServices函数)和处理函数(Handle函数)，以及系统退出后如何清理未释放资源(Close函数)|
-|registry.go|服务注册，所有提供的服务通过Register函数注册,并通过main.go中的GetServices()可以得到注册的列表|
+|main.go|程序入口，初始化，并启动服务器|
+|loader.go|服务注册，注册外部服务|
 |services|存放所有服务的实现代码|
-|conf/conf.go|提供基于请求的配置参数获取方式|
 
 
 ### 2. 配置服务器运行参数
 服务器参数是通过注册中心管理的，注册中心目前只支持zookeeper([安装zookeeper](https://github.com/qxnw/hydra/blob/master/quickstart/4.install_zk.md))，
-配置服务器运行参数(端口，路由规则，安全认证等)可以使用themis([安装themis](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md))图形界面进行操作，也可以使用zooInspector([安装zooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip))手动编写json配置代码
+配置服务器运行参数(端口，路由规则，安全认证等)可以使用hydrd cloud([安装hydrd cloud](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md))图形界面进行操作，也可以使用zooInspector([安装zooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip))手动编写json配置代码
 
 ####  使用zooInspector配置服务器参数
 1. 启动`zooInspector`输入zookeeper服务器地址
-2. 创建服务器配置目录,格式： /<平台名称>/servers/<系统名称>/<服务器类型>/conf/<配置标识>
+2. 创建服务器配置目录,格式： /<平台名称>/<系统名称>/<服务器类型>/<集群标识>/conf
 
 |名称|说明|
 |:------:|:------|
 |平台名称|指大的系统或平台，是一组系统的统称|
 |系统名称|某个子系统名称，如后台管理系统，前端用户系统等|
-|服务器类型|如接口服务器，rpc服务器，web应服务器，mq consumer,自动服器对应的类型分别为:api,rpc,web,mq,cron|
-|配置标识|用于控制一台或一组服务器的分组标识，可以是任意名称，通常为服务器的IP地址的最后一段|
+|服务器类型|服务器类型，如:api,rpc,web,mqc,cron|
+|集群标识|用于控制一组服务，通常指集群名称
 
 我们按如下结构创建一个服务器配置：
    
 	|-- myplat
 	|     -- quickstart
 	|        -- api
-	|           -- 171
+	|           -- order-a
 	|              -- conf
 	|                 --router
 
-我们只需要设置/myplat/quickstart/api/171/conf节点和/myplat/quickstart/api/171/conf/router节点的值，我们按以下内容设置:
+我们只需要设置/myplat/quickstart/api/order-a/conf节点和/myplat/quickstart/api/order-a/conf/router节点的值，我们按以下内容设置:
 
 |节点名称|类型|json配置|说明|
 |------|------|:------|:-------|
-|.../api/171/conf|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
-|.../api/171/conf/router|路由配置|{"routers":[{"name":"/order/query","service":"/order/query"}]}|`name`为外部请求地址，`service`为注册的服务名称|
+|.../api/order-a/conf|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
+|.../api/order-a/conf/router|路由配置|{"routers":[{"name":"/order/query","service":"/order/query"}]}|`name`为外部请求地址，`service`为注册的服务名称|
 
 
 ### 3. 启动服务器
