修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -42,100 +42,63 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 2. 创建服务器配置目录,格式： /<平台名称>/<系统名称>/<服务器类型>/<集群标识>/conf
 
 |名称|说明|
-|:------:|:------|
+|------|------|
 |平台名称|指大的系统或平台，是一组系统的统称|
 |系统名称|某个子系统名称，如后台管理系统，前端用户系统等|
-|服务器类型|服务器类型，如:api,rpc,web,mqc,cron|
-|集群标识|用于控制一组服务，通常指集群名称
+|服务器类型|可选的服务器类型有:api,rpc,web,mqc,cron|
+|集群标识|用于控制一组服务器，通常指集群名称
 
 我们按如下结构创建一个服务器配置：
    
 	|-- myplat
 	|     -- quickstart
 	|        -- api
-	|           -- order-a
+	|           -- order
 	|              -- conf
 	|                 --router
 
-我们只需要设置/myplat/quickstart/api/order-a/conf节点和/myplat/quickstart/api/order-a/conf/router节点的值，我们按以下内容设置:
+我们只需要设置/myplat/quickstart/api/order/conf节点和/myplat/quickstart/api/order/conf/router节点的值，我们按以下内容设置:
 
 |节点名称|类型|json配置|说明|
 |------|------|:------|:-------|
-|.../api/order-a/conf|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
-|.../api/order-a/conf/router|路由配置|{"routers":[{"name":"/order/query","service":"/order/query"}]}|`name`为外部请求地址，`service`为注册的服务名称|
+|.../api/order/conf|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
+|.../api/order/conf/router|路由配置|{"routers":[{"name":"/order/query","service":"/order/query"}]}|`name`为外部请求地址，`service`为注册的服务名称|
 
 
 ### 3. 启动服务器
-可通过以下两种方式启动服务器：
-#### a. 使用hydra直接启动
-直接使用hydra启动前请确认项目是否编译为动态库，可在$GOPATH/bin目录下使用命令`go build -buildmode=plugin quickstart`进行编译，然后执行命令:`hydra <平台名称> -r <注册中心地址> -t <配置标识>`
+#### a. 直接启动
+在$GOPATH/bin目录下使用命令`go install quickstart`进行编译，然后执行命令:`./quickstart <平台名称> -r <注册中心地址> -t <集群标识>`
 
 ```sh
-~/work/bin$ hydra myplat -r "zk://192.168.106.172" -t "171"
-[2017/11/01 15:37:45.450110][i][5c0480c14]Listening on http://0.0.0.0:10160
-[2017/11/01 15:37:45.456088][i][1e50735ec]Connected to 192.168.106.172:2181
-[2017/11/01 15:37:45.458613][i][1e50735ec]Authenticated: id=170788807545718089, timeout=4000
-[2017/11/01 15:37:45.458627][i][1e50735ec]Re-submitting `0` credentials after reconnect
-[2017/11/01 15:37:46.450214][i][1e50735ec]启动 hydra server(171,zk)...
-[2017/11/01 15:37:46.464631][i][1e50735ec]加载引擎插件： ./quickstart.so
-[2017/11/01 15:37:46.466433][i][f3a9f5e3b]quickstart(api):http头配置:0
-[2017/11/01 15:37:46.467329][i][f3a9f5e3b]quickstart(api):未配置静态文件
-[2017/11/01 15:37:46.469052][w][f3a9f5e3b]quickstart(api):未配置metric
-[2017/11/01 15:37:46.469066][i][f3a9f5e3b]Listening on http://0.0.0.0:8081
-[2017/11/01 15:37:46.969244][i][1e50735ec]启动成功:quickstart(api)(addr:http://192.168.5.71:8081,srvs:1)
+H97-HD3:~/work/bin$ ./quickstart quickstart -r "zk://192.168.106.18" -t "t"
+[2018/03/06 09:53:39.170744][hydra][i][20d36a9e4]Connected to 192.168.106.18:2181
+[2018/03/06 09:53:39.174933][hydra][i][20d36a9e4]Re-submitting `0` credentials after reconnect
+[2018/03/06 09:53:39.174916][hydra][i][20d36a9e4]Authenticated: id=99447815291405140, timeout=4000
+[2018/03/06 09:53:40.170467][hydra][i][20d36a9e4]启动 hydra server(t,zk,v:)...
+[2018/03/06 09:53:40.174895][order-api][i][f88267338]开始启动:order.api(t)
+[2018/03/06 09:53:40.671032][hydra][i][20d36a9e4]启动成功:health-checker.api(addr:http://192.168.5.71:10160)
+[2018/03/06 09:53:40.687893][order-api][i][f88267338]启动成功:order.api(t)(addr:http://192.168.5.71:8081,srvs:1)
 
 ```
-#### b. 使用`gaea run`命令启动
-使用`gaea run`启动服务时无需关注项目是否编译为动态库，因为`gaea`启动时或检测到项目变化后会自动编译项目，执行命令:`gaea run <hydra运行参数> -w <项目路径>`
-[了解更多gaea命令](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
 
-```sh
-~/work/bin$ gaea run myplat -r "zk://192.168.106.172" -t "171" -w "quickstart"
-[2017/11/01 16:04:55.854413][i][6c86d3023]启动 gaea ...
-[2017/11/01 16:04:55.854467][i][6c86d3023]监控项目:/home/my/work/src/quickstart文件的变化...104-2-[run myplat]
-[2017/11/01 16:04:55.854758][i][d9a48f203]开始编译hydra...
-[2017/11/01 16:04:55.975286][i][d9a48f203]hydra编译成功
-[2017/11/01 16:04:55.975323][i][d9a48f203]开始编译/quickstart...
-[2017/11/01 16:04:55.975360][i][d9a48f203]结束进程:hydra  [myplat -r zk://192.168.106.172 -t 171 -d]
-[2017/11/01 16:05:01.400675][i][d9a48f203]/quickstart 编译成功
-[2017/11/01 16:05:01.400733][i][d9a48f203]-------------开始启动hydra-------------
-[2017/11/01 16:05:01.411172][i][bf38f8021]Listening on http://0.0.0.0:10160
-[2017/11/01 16:05:01.411557][i][c4616c6ec]Connected to 192.168.106.172:2181
-[2017/11/01 16:05:01.415275][i][c4616c6ec]Authenticated: id=170788807545718099, timeout=4000
-[2017/11/01 16:05:01.415292][i][c4616c6ec]Re-submitting `0` credentials after reconnect
-[2017/11/01 16:05:02.411419][i][c4616c6ec]启动 hydra server(171,zk)...
-[2017/11/01 16:05:02.431127][i][c4616c6ec]加载引擎插件： ./quickstart.so
-[2017/11/01 16:05:02.433125][i][b57103992]quickstart(api):http头配置:0
-[2017/11/01 16:05:02.433861][i][b57103992]quickstart(api):未配置静态文件
-[2017/11/01 16:05:02.435222][w][b57103992]quickstart(api):未配置metric
-[2017/11/01 16:05:02.435245][i][b57103992]Listening on http://0.0.0.0:8081
-[2017/11/01 16:05:02.935514][i][c4616c6ec]启动成功:quickstart(api)(addr:http://192.168.5.71:8081,srvs:1)
-```
-
----------------------------
-
-
-
-我们看到服务器quickstart(api)已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
+我们看到服务器quickstart-order-api已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
 
 
 ### 4. 访问服务
-  在终端输入命令访问服务: `curl http://localhost:8081/hello?id=1`
+  在终端输入命令访问服务: `curl http://http://192.168.5.71:8081/order/query`
 ```sh
-~/work/bin$ curl http://localhost:8081/hello?id=1
-{"id":"1"}
+~/work/bin$ curl http://http://192.168.5.71:8081/order/query
+hello world
 
 ```
 返回内容为我们在$GOPATH/src/quickstart/service/myservice.go定义的内容
 
 再看看服务器的执行情况:
 ```sh
-[2017/11/01 15:39:36.566977][i][7f47e7774]api.request: quickstart GET /hello?id=1 from 127.0.0.1
-[2017/11/01 15:39:36.567705][i][7f47e7774]---------------业务处理---------------
-[2017/11/01 15:39:36.567707][i][7f47e7774]返回结果
-[2017/11/01 15:39:36.567754][i][7f47e7774]api.response: quickstart GET /hello?id=1 200 782.097µs
+[2018/03/06 10:01:01.972554][order.api(t)][i][2e5a49951]api.request: order GET /order/query from 127.0.0.1
+[2018/03/06 10:01:01.973036][order.api(t)][i][2e5a49951]api.response: order GET /order/query 200  547.88µs
 
 ```
-其中`api.request` 和 `api.response`两行为服务器自动输出的日志，其它则由业务逻辑自己打印的日志
+其中`api.request` 和 `api.response`两行为服务器自动输出的日志，表示请求和响应的信息
 
 + 至此我们使用`gaea`创建了一个简单的service项目，并通过`zooInspector`配置为http接口服务，并通过`hydra`运行起来，使用`curl`成功访问到了这个服务
