修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -14,7 +14,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 ```
 ```
 
-通过以上命令我们就创建了一个hydra的service项目，通过这个项目编写的代码可运行于http接口，rpc服务，定时任务，job consumer等，项目的目录结构如下:
+通过以上命令我们就创建了一个service项目，通过这个项目编写的代码可运行于http接口，rpc服务，定时任务，mqc等服务器，项目的目录结构如下:
 	
 	
 	|-- services                    ---服务目录
@@ -24,7 +24,6 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 	|-- loader.go                   ---服务加载
 
 项目文件说明：
-
 
 |  文件路径  |  说明   |
 |:-------:|:-------:|
@@ -48,7 +47,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |服务器类型|可选的服务器类型有:api,rpc,web,mqc,cron|
 |集群标识|用于控制一组服务器，通常指集群名称
 
-我们按如下结构创建一个服务器配置：
+我们按如下结构创建一个`api`服务器配置：
    
 	|-- myplat
 	|     -- quickstart
