修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -12,9 +12,8 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 [2018/03/06 09:19:00.956594][i][3f97ca0bf]创建文件: /home/work/src/hydraDemo/services/order/order.query.go 518
 [2018/03/06 09:19:00.956598][i][3f97ca0bf]项目生成成功: /home/work/src/hydraDemo
 ```
-```
 
-通过以上命令我们就创建了一个service项目，通过这个项目编写的代码可运行于http接口，rpc服务，定时任务，mqc等服务器，项目的目录结构如下:
+通过以上命令我们就创建了一个service项目，通过这个项目编写的代码可运行于http api，web，rpc，mqc,cron等服务器，项目的目录结构如下:
 	
 	
 	|-- services                    ---服务目录
