修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -27,8 +27,8 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |  文件路径  |  说明   |
 |:-------:|:-------:|
 |main.go|程序入口，初始化，并启动服务器|
-|loader.go|服务注册，注册外部服务|
-|services|存放所有服务的实现代码|
+|loader.go|服务加载函数，用于注册所有外部服务，并在服务器启动时加载|
+|services|存放所有服务实现的代码|
 
 
 ### 2. 配置服务器运行参数
