修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -41,10 +41,10 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 |名称|说明|
 |:------:|:------|
-|平台名称|指大的系统或平台，是一组系统的统称|
-|系统名称|某个子系统名称，如后台管理系统，前端用户系统等|
+|平台名称|项目或平台名称|
+|系统名称|子系统名称，如后台管理系统，前端用户系统等|
 |服务器类型|可选的服务器类型有:api,rpc,web,mqc,cron|
-|集群标识|用于控制一组服务器，通常指集群名称
+|集群标识|子系统内的一组服务集群|
 
 我们按如下结构创建一个`api`服务器配置：
    
