修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -44,7 +44,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |平台名称|项目或平台名称|
 |系统名称|子系统名称，如后台管理系统，前端用户系统等|
 |服务器类型|可选的服务器类型有:api,rpc,web,mqc,cron|
-|集群标识|子系统内的一组服务集群|
+|集群标识|子系统内的一组服务的集群|
 
 我们按如下结构创建一个`api`服务器配置：
    
@@ -55,7 +55,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 	|              -- conf
 	|                 --router
 
-我们只需要设置/myplat/quickstart/api/order/conf节点和/myplat/quickstart/api/order/conf/router节点的值，我们按以下内容设置:
+`conf`,`router`为必须设置节点，/myplat/quickstart/api/order/conf节点和/myplat/quickstart/api/order/conf/router节点的值，我们按以下内容设置:
 
 |节点名称|类型|json配置|说明|
 |------|------|:------|:-------|
