--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -31,6 +31,40 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |services|存放所有服务实现的代码|
 
 
+`main.go`代码如下
+```go
+package main
+
+import (
+	"github.com/qxnw/hydra/hydra"
+)
+
+func main() {
+	hydra := hydra.New(loader())
+	defer hydra.Close()
+	hydra.Start()
+}
+
+```
+`loader.go`代码如下:
+```go
+package main
+
+import (
+	"github.com/qxnw/helloworld/services/order"
+	"github.com/qxnw/hydra/component"
+	"github.com/qxnw/hydra/engines"
+)
+
+func loader() engines.ServiceLoader {
+	return func(component *component.StandardComponent, container component.IContainer) {
+		component.AddMicroService("/order/query", order.NewQueryHandler)
+	}
+}
+
+```
+
+
 ### 2. 配置服务器运行参数
 服务器运行参数是通过注册中心管理的，注册中心目前支持zookeeper([安装zookeeper](https://github.com/qxnw/hydra/blob/master/quickstart/4.install_zk.md))，
 配置服务器运行参数(端口，路由规则，安全认证等)可以使用hydrd cloud([安装hydrd cloud](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md))图形界面进行操作，也可以使用zooInspector([安装zooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip))手动编写json
