修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -63,6 +63,33 @@ func loader() engines.ServiceLoader {
 }
 
 ```
+`services/order.query.go`代码如下:
+```go
+package order
+
+import (
+	"github.com/qxnw/hydra/component"
+	"github.com/qxnw/hydra/context"
+)
+
+type QueryHandler struct {
+}
+
+func NewQueryHandler(container component.IContainer) (u *QueryHandler) {
+	return &QueryHandler{}
+}
+func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
+	response := context.GetStandardResponse()
+	response.SetContent(200, "hello world")
+	return response, nil
+}
+
+func (u *QueryHandler) Close() error {
+	return nil
+}
+
+```
+
 
 
 ### 2. 配置服务器运行参数
