修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -31,7 +31,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 |services|存放所有服务实现的代码|
 
 
-`main.go`代码如下
+`main.go`根据服务注册的loader初始化hydra,并启服务器，代码如下
 ```go
 package main
 
@@ -46,7 +46,7 @@ func main() {
 }
 
 ```
-`loader.go`代码如下:
+`loader.go`将服务注册到hydra组件，代码如下:
 ```go
 package main
 
@@ -63,7 +63,7 @@ func loader() engines.ServiceLoader {
 }
 
 ```
-`services/order.query.go`代码如下:
+`services/order.query.go`实现component.Handler接口，用于提供服务逻辑实现，代码如下:
 ```go
 package order
 
