修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -158,6 +158,6 @@ hello world
 [2018/03/06 10:01:01.973036][order.api(t)][i][2e5a49951]api.response: order GET /order/query 200  547.88µs
 
 ```
-其中`api.request` 和 `api.response`两行为服务器自动输出的日志，表示请求和响应的信息
+其中`api.request` 和 `api.response`两行为服务器自动输出的请求和响应信息
 
 + 至此我们使用`gaea`创建了一个简单的service项目，并通过`zooInspector`配置为http接口服务，并通过`hydra`运行起来，使用`curl`成功访问到了这个服务
