修改用户手册

--- a/quickstart/7.server.intro.md
+++ b/quickstart/7.server.intro.md
@@ -1,16 +1,16 @@
 ## 服务器概述
-1. hydra自身集成了多种服务器,并使用统一服务治理后台(themis)进行管理。这既简化了部署又统一了开发模式，这正是hydra的强大之处。服务器设计借鉴了tango的设计理念，采用模块化和注入式的设计，可根据服务器的需要选择性加载服务器功能。
+1. hydra自身集成了多种服务器,并使用统一服务治理后台(hydra cloud)进行管理。这既简化了部署又统一了开发模式，这正是hydra的强大之处。服务器设计借鉴了martini的设计理念，采用模块化和注入式的设计。
 
-2. 由于hydra抽象出context和response,所有请求参数都放到context中，所有返回结果都放到response中，由不同的服务器自己转换输入与输出，所以我们开发的项目可以运行于任何服务器，而无需修改一句代码(web应用只需增加view页面即可)
+2. 由于hydra抽象出context和response,所有请求参数都放到context中，所有返回结果都放到response中，由不同的服务器自己转换输入与输出，所以我们开发的项目无需修改代码，但可以运行于hydra的任何服务器
 
 目前hydra集成了以下5种服务器:
 
 |服务器类型|说明|
 |:------:|:------|
-|api|http接口服务器,支持路由，安全验证，自定义http头，静态文件配置等|
-|web|web应用服务器，支持路由，安全验证，自定义http头，静态文件配置，自定义views路径等|
-|rpc|rpc服务器，基于grpc实现，支持路由，安全验证，限流等|
-|mqc|mq consumer,支持stomp协议的消息队列|
+|api|http接口服务器,基于gin实现|
+|web|web服务器，基于gin实现|
+|rpc|rpc服务器，基于grpc实现|
+|mqc|mq consumer,支持stomp，redis的消息队列|
 |cron|定时任务，基于cron表达式的定时任务|
 
 + 服务器启动与配置变更后自动更新流程:
