修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -3,7 +3,7 @@
 
 |名称|说明|名称|说明|
 |------|-------|-------|-------|
-|智能路由|支持|并发数统计|支持|
+|智能路由|&#x2714;|并发数统计|&#x2714;|
 |静态文件|支持|请求时长统计|支持|
 |TLS|支持|请求结果统计|支持|
 |主机头配置|支持|URL转跳|支持|
