--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -4,14 +4,14 @@
 |名称|说明|名称|说明|
 |------|-------|-------|-------|
 |智能路由|&#x2714;|并发数统计|&#x2714;|
-|静态文件|支持|请求时长统计|支持|
-|TLS|支持|请求结果统计|支持|
-|主机头配置|支持|URL转跳|支持|
-|自定义http头|支持|json输出|支持|
-|gzip压缩|支持|xml输出|支持|
-|deflate压缩|支持|OnlyAllowAjaxRequest|支持|
-|jwt|支持|xsrf|支持|
-
+|静态文件|&#x2714;|请求时长统计|&#x2714;|
+|TLS|&#x2714;|请求结果统计|&#x2714;|
+|主机头|&#x2714;|健康检查|&#x2714;|
+|http头|&#x2714;|json输出|&#x2714;|
+|RESTful|&#x2714;|xml输出|&#x2714;|
+|服务熔断|&#x2714;|plain输出|&#x2714;|
+|服务限流|&#x2714;|jwt认证|&#x2714;|
+服务降级|&#x2714;|优雅重启|&#x2714;|
 ## 服务器参数配置
 ### 1. 服务配置概况
     |-- [platName]
