修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -11,32 +11,33 @@
 |RESTful|&#x2714;|xml输出|&#x2714;|
 |服务熔断|&#x2714;|plain输出|&#x2714;|
 |服务限流|&#x2714;|jwt认证|&#x2714;|
-服务降级|&#x2714;|优雅重启|&#x2714;|
+|服务降级|&#x2714;|优雅重启|&#x2714;|
 ## 服务器参数配置
 ### 1. 服务配置概况
     |-- [platName]
-	|   -- servers 
-	|       --[subsystemName]
+	|       --[systemName]
 	|          --api
-	|             --conf
-	|                --[tagName]
+	|             --[clusterName]
+	|                --conf
 	|                     --router
     |                     --metric
     |                     --static
     |                     --auth
     |                     --header
+    |                --servers
+    |                     --
     |   --var
     |       --db
     |          --oracle
     |       --influxdb
     |          --oracle
     |       --conf
-    |          --[subsystemName]
+    |          --[systemName]
 
-`[platName]`： 平台名称或系统名称，`[subsystemName]`: 子系统名称
+`[platName]`： 平台名称，`[systemName]`: 系统名称
 
 
-+ 服务器配置路径：/[platName]/[servers]/[subsystemName]/api/conf
++ 服务器配置路径：/[platName]/[systemName]/api/[clusterName]/conf
 + 公共参数路径：/[platName]/var
 
 
@@ -44,17 +45,17 @@
 
 |名称|必须|说明|
 |------|------|------|
-|[tagName]|必须|服务器主配置信息，包含服务器启动的必须参数,名称可以为任意字符,与启动的hydra实例匹配|
+|[conf]|必须|服务器主配置信息，包含服务器启动的必须参数,名称可以为任意字符,与启动的hydra实例匹配|
 |router|必须|路由配置信息|
-|metric|可空|influxdb配置信息，用于存放服务器实时请求数据(QPS,执行时长，执行结果等)|
-|static|可空|静态文件配置，如路径，扩展名等|
-|auth|可空|安全认证信息，包括:jwt,xsrf,api basic,auth2等|
-|header|可空|所有请求都要返回的公共头信息|
+|metric|可选|influxdb配置信息，用于存放服务器实时请求数据(QPS,执行时长，执行结果等)|
+|static|可选|静态文件配置，如路径，扩展名等|
+|auth|可选|安全认证信息，包括:jwt,xsrf,api basic,auth2等|
+|header|可选|所有请求都要返回的公共头信息|
 
 
 
 ### 2. 服务器主配置
-服务器主配置信息，包含服务器启动的必须参数，路径:`/[platName]/[servers]/[subsystemName]/api/conf/[tagName]`
+服务器主配置信息，包含服务器启动的必须参数，路径:`/[platName]/[systemName]/api/[clusterName]/conf/`
 ```json
 {
     "address":":8080",
@@ -64,17 +65,17 @@
         "cert":"../www.baidu.com.crt",
         "key":"../baidu2017098773.key"
     },
-    "metric":"/@domain/var/influxdb/metric"
+    "host":"www.hydra.com"
 }
 ```
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
 |address|必须|服务器启动地址,有效的格式为`[ip]:<port>`,ip地址为空时为本机所有ip|
-|status|必须|服务器状态，可选值为: start(启动)，stop(停止)|
+|status|必须|服务器状态,默认为start，可选值为: start(启动)，stop(停止)|
 |engines|可空|引擎配置参数，使用了内置引擎时必须填写，多个擎使用逗号分隔。内置的引擎有:`alarm`,`monitor`,`file`等,未配置则不能使用内置引擎|
 |tls|可空|tls证书配置，未配置则不启动tls|
-|metric|可空|未配置时查找当前配置节点的子节点中是否存在名称为 `metric` 的配置，没有则不启动metric|
+|host|可空|主机头配置，配置后只能通过主机头请求|
 
 ### 3. 路由配置
 配置服务器请求URL的规则与内部服务的映射关系，和请求执行期间的参数。未配置路由规则服务器就无法对外提供任何服务：
@@ -82,11 +83,11 @@
 {
     "routers":[
         {
-            "name":"/order/:a",
-            "engine":"go",
+            "name":"/order/:query",
+            "engine":"*",
             "action":"get,post",
-            "service":"/order/@a",
-            "args":"setting=s1"
+            "service":"/order/@query",
+            "args":"mq=redis"
         }
     ],
     "args":"db=oracle"
@@ -96,7 +97,7 @@
 |参数名|必须|说明|
 |:------|:-------:|:------|
 |.routers|必须|路由列表|
-|.args|可选|所有路由共用的全局配置参数|
+|.args|可选|所有服务共用的全局配置参数，执行服务时传入该配置参数|
 |.routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式。如`/order/request`全字匹配路径为/order/request的请求地址，`/order/:a`,匹配以`/order/`开头的任何路径，并将`:a`的实际值作为变量`@a`保存，当前配置节点的其它参数可用使用`@a`使用该值|
 |.routers.service|必须|当前资源映射的内部服务名称，支持变量翻译|
 |.routers.engine|可选|未指定时为`*`,支持所有引擎，可选的引擎名称有`go`,`alarm`等|
@@ -174,7 +175,6 @@
 {
     "prefix":"/static",
     "dir":"../images",
-    "showDir":false,
     "exts":".jpg;.gif;.png",
     "enbale":true
 }
