修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -188,3 +188,28 @@
 |showDir|可空|是否显示目录结构, 默认为:false|
 |exts|必须|静态文件的扩展名|
 |enable|可空|true:启用静态文件配置, false:禁用静态文件配置|
+
+
+### 3. metric配置
+配置内容
+```json
+{
+    "enable":true,
+    "cron":"@every 1m",
+    "host":"http://192.168.0.185:8086",
+    "dataBase":"hydrav2",
+    "userName":"qyzf",
+    "password":"123456"
+    
+}
+```
+
+
+|参数名|必须|说明|
+|:------|:-------:|:------|
+|enable|可选|未指定是为true|
+|cron|必须|上报周期|
+|host|必须|influxdb服务地址|
+|dataBase|必须|数据库名称|
+|userName|可选|服务器登录用户名|
+|password|可选|服务器登录密码|
