修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -185,8 +185,7 @@
 |:------|:-------:|:------|
 |prefix|可空|请求路径的前缀名,如:/static/logo.png,则匹配dir目录下的logo.png文件|
 |dir|必须|静态文件存放路径|
-|showDir|可空|是否显示目录结构, 默认为:false|
-|exts|必须|静态文件的扩展名|
+|exts|必须|静态文件的扩展名,为`*`则不限制扩展名|
 |enable|可空|true:启用静态文件配置, false:禁用静态文件配置|
 
 
