修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -206,7 +206,7 @@
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
-|enable|可选|未指定是为true|
+|enable|可选|是否启用当前配置，未指定是为true|
 |cron|必须|上报周期|
 |host|必须|influxdb服务地址|
 |dataBase|必须|数据库名称|
