修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -25,14 +25,24 @@
     |                     --auth
     |                     --header
     |                --servers
-    |                     --
-    |   --var
-    |       --db
+    |                     --[ip]-[seq]
+    |--var
+    |      --db
     |          --oracle
-    |       --influxdb
+    |      --influxdb
     |          --oracle
-    |       --conf
+    |      --conf
     |          --[systemName]
+    |--services
+    |      --api
+    |          --[hostName]
+    |              --providers
+    |                  --[ip]-[seq]
+    |      --rpc
+    |          --[hostName]
+    |              --[serviceName]
+    |                  --providers
+    |                      --[ip]-[seq]
 
 `[platName]`： 平台名称，`[systemName]`: 系统名称
 
