--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -13,7 +13,7 @@
 |服务限流|&#x2714;|jwt认证|&#x2714;|
 |服务降级|&#x2714;|优雅重启|&#x2714;|
 ## 服务器参数配置
-### 1. 服务配置概况
+### 1. 注册中心概况
     |--[platName]
 	|       --[systemName]
 	|          --api
@@ -47,8 +47,9 @@
 `[platName]`： 平台名称，`[systemName]`: 系统名称
 
 
-+ 服务器配置路径：/[platName]/[systemName]/api/[clusterName]/conf
-+ 公共参数路径：/[platName]/var
++ 服务器配置：/[platName]/[systemName]/api/[clusterName]/conf
++ 公共参数配置：/[platName]/var
++ 服务注册与发现:/services
 
 
 
