修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -47,9 +47,9 @@
 `[platName]`： 平台名称，`[systemName]`: 系统名称
 
 
-+ 服务器配置：/[platName]/[systemName]/api/[clusterName]/conf
-+ 公共参数配置：/[platName]/var
-+ 服务注册与发现:/services
++ 服务器配置： /[platName]/[systemName]/api/[clusterName]/conf
++ 公共参数配置： /[platName]/var
++ 服务注册与发现： /services
 
 
 
