修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -30,7 +30,7 @@
     |      --db
     |          --oracle
     |      --influxdb
-    |          --oracle
+    |          --metric
     |      --conf
     |          --[systemName]
     |--services
