修改用户手册

--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -45,7 +45,7 @@
     |                      --[ip]-[seq]
     |
 
-`[platName]`： 平台名称，`[systemName]`: 系统名称
+`[platName]`： 平台名称  `[systemName]`: 系统名称
 
 
 + 服务器配置： /[platName]/[systemName]/api/[clusterName]/conf
