--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -57,7 +57,7 @@
 
 |名称|必须|说明|
 |------|------|------|
-|[conf]|必须|服务器主配置信息，包含服务器启动的必须参数,名称可以为任意字符,与启动的hydra实例匹配|
+|conf|必须|服务器主配置信息，包含服务器启动的必须参数,名称可以为任意字符,与启动的hydra实例匹配|
 |router|必须|路由配置信息|
 |metric|可选|influxdb配置信息，用于存放服务器实时请求数据(QPS,执行时长，执行结果等)|
 |static|可选|静态文件配置，如路径，扩展名等|
