修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -1,5 +1,5 @@
 ## http.server路由配置
-本路由配置适用于http api服务器和web服务器，用于配置客户端请求的URL与内部服务的映射关系，以及服务执行参数。未配置路由规则服务器就无法对外提供任何服务：
+本路由配置适用于http api服务器和web服务器，用于配置客户端请求的URL与内部服务的映射关系，以及服务所需的配置参数。未配置就无法对外提供任何服务：
 ```json
 {
     "routers":[
