--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -20,10 +20,10 @@
 |.routers|必须|路由列表|
 |.args|可选|所有服务共用的全局配置参数，执行服务时传入该配置参数|
 |.routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式。如`/order/request`全字匹配路径为/order/request的请求地址，`/order/:a`,匹配以`/order/`开头的任何路径，并将`:a`的实际值作为变量`@a`保存，当前配置节点的其它参数可用使用`@a`使用该值|
-|.routers.service|必须|当前资源映射的内部服务名称，支持变量翻译|
-|.routers.engine|可选|未指定时为`*`,支持所有引擎，可选的引擎名称有`go`,`alarm`等|
-|.routers.action|可选|允许的http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,	`OPTIONS`,`TRACE`,`PATCH` 未指定时为`GET`。多种请求方式用逗号分隔|
-|.routers.args|可选|当前路由规则对应的服务配置参数，系统会自动与`.args`合并，以当前的配置覆盖全局配置|
+|.routers.service|必须|服务名称，支持变量翻译|
+|.routers.engine|可选|未指定时为`*`,支持所有引擎|
+|.routers.action|可选| 未指定时为`GET`，允许的http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用逗号分隔|
+|.routers.args|可选|服务执行所需的配置参数，系统会自动与`.args`合并，以当前的配置覆盖`.args`配置|
 
 ####  1). hydra支持4种路由配置
 
