修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -14,6 +14,18 @@
     "args":"db=oracle"
 }
 ``` 
+或
+```json
+{
+    "routers":[
+        {
+            "name":"/order/:query",           
+            "service":"/order/@query",
+        }
+    ]
+}
+```
+
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
