修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -13,17 +13,6 @@
     ],
     "args":"db=oracle"
 }
-``` 
-或
-```json
-{
-    "routers":[
-        {
-            "name":"/order/:query",           
-            "service":"/order/@query",
-        }
-    ]
-}
 ```
 
 
@@ -34,30 +23,61 @@
 |.routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式。如`/order/request`全字匹配路径为/order/request的请求地址，`/order/:a`,匹配以`/order/`开头的任何路径，并将`:a`的实际值作为变量`@a`保存，当前配置节点的其它参数可用使用`@a`使用该值|
 |.routers.service|必须|服务名称，支持变量翻译|
 |.routers.engine|可选|未指定时为`*`,支持所有引擎|
-|.routers.action|可选| 未指定时为`GET`，允许的http请求方式，如:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用逗号分隔|
+|.routers.action|可选| 未指定时只支持`GET`，`POST`,`PUT`,`DELETE`。可选的值有:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用逗号分隔|
 |.routers.args|可选|服务执行所需的配置参数，系统会自动与`.args`合并，以当前的配置覆盖`.args`配置|
 
-####  1). hydra支持4种路由配置
+####  1). 路由示例
 
- + 静态路由
+ + 最简单路由
 
-`/`
+```json
+{
+    "routers":[
+        {
+            "name":"/order/query",
+            "service":"/order/query",
+        }
+    ]
+}
+```
+支持`GET`，`POST`,`PUT`,`DELETE`请求, 从已加载的所有引擎`engines`(`../conf`中配置的`engines`)中查找`/order/query`服务
 
-`/static` 
-
-以固定名称作为路径全称进行匹配
+等价于:
+```json
+{
+    "routers":[
+        {
+            "name":"/order/query",
+            "action":"GET,POST,PUT,DELETE",
+            "engine":"*",
+            "service":"/order/query",
+        }
+    ]
+}
+```
 
 + 命名路由
 
-`/:name`
+```json
+{
+    "routers":[
+        {
+            "name":"/:a/:b",
+            "service":"/@b/@a",
+        }
+    ]
+}
+```
 
-`/(:name)`
+支持两段地址，分别对这两段名称为`a`和`b`,`service`可使用`@a`,`@b`进行参数读取。则请求地址为：
 
-`/:name1/:name2`
+`/order/query`对应的`service`为`/query/order`
 
-`/:name1-:name2`
+`/order/request`对应的`service`为`/request/order`
 
-`/(:name1)sss(:name2)`
+`/history/order/query`则找不到服务，返回`404`错误
+
+
 
 + 通配路由
 
