修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -40,7 +40,7 @@
     ]
 }
 ```
-支持`GET`，`POST`,`PUT`,`DELETE`请求, 从已加载的所有引擎`engines`(`../conf`中配置的`engines`)中查找`/order/query`服务
+支持`GET`，`POST`,`PUT`,`DELETE`请求, 从已加载的所有引擎`engines`(`../conf`中配置的`engines`)中查找`/order/query`服务，未找到则返回`404`错误
 
 等价于:
 ```json
