修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -69,14 +69,15 @@
 }
 ```
 
-支持两段地址，分别对这两段名称为`a`和`b`,`service`可使用`@a`,`@b`进行参数读取。则请求地址为：
+支持两段地址，分别对这两段命名为`a`和`b`,`service`可使用`@a`,`@b`进行参数读取。则请求地址为：
 
 `/order/query`对应的`service`为`/query/order`
 
 `/order/request`对应的`service`为`/request/order`
 
-`/history/order/query`则找不到服务，返回`404`错误
+`/history/order/query`无法匹配，返回`404`错误
 
+`/query`无法匹配，返回`404`错误
 
 
 + 通配路由
