修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -96,3 +96,23 @@
 ```
 
 可匹配以`/`开始的任意路径
+
+
+###  重复路由配置
+
+```json
+{
+    "routers":[
+         {
+            "name":"/order/request",
+            "service":"/order/request",
+        },
+        {
+            "name":"/:a/:b",
+            "service":"/@b/@a",
+        }
+    ]
+}
+```
+
+由于路由`/:a/:b`已包含`/order/request` 所以，该路由配置会导致服务器启动失败,并提示以下错误`:wildcard route '/order/request' conflicts with existing children in path '/:a/:b'`
