修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -115,4 +115,4 @@
 }
 ```
 
-由于路由`/:a/:b`已包含`/order/request` 所以，该路由配置会导致服务器启动失败,并提示以下错误`:wildcard route '/order/request' conflicts with existing children in path '/:a/:b'`
+由于路由`/:a/:b`已包含`/order/request` 所以该路由配置会导致服务器启动失败,并提示以下错误`:wildcard route ':a' conflicts with existing children in path '/:a/:b'` 删除路由`/order/request`或修改`action`为不同的值，可解决路由冲突。
