--- a/quickstart/api/3.api_static.md
+++ b/quickstart/api/3.api_static.md
@@ -2,7 +2,7 @@
 
 ## 静态文件
 
-配置内容:
+本配置适用于http api服务器和web服务器，配置内容:
 
 ```json
 {
@@ -16,8 +16,75 @@
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
-|prefix|可空|请求路径的前缀名,如:/static/logo.png,则匹配dir目录下的logo.png文件|
+|prefix|可空|请求路径的前缀名|
 |dir|必须|静态文件存放路径|
 |exts|必须|静态文件的扩展名,为`*`则不限制扩展名|
 |enable|可空|true:启用静态文件配置, false:禁用静态文件配置|
 
+####  配置示例
+
+ + 1. 静态文件存放于`../static`目录
+```json
+{
+    "prefix":"/",
+    "dir":"../static",
+    "exts":".jpg;.html",
+    "enbale":true
+}
+```
+
+访问地址`/index.html` 查找`../static/index.html` 如果存在则返回，否则返回`404`
+
+访问地址`/logo.jpg` 查找`../static/logo.jpg` 如果存在则返回，否则返回`404`
+
+... ...
+
+访问地址`/logo.png` 无法匹配返回`404`
+
+ + 2. 任意扩展名
+
+```json
+{
+    "prefix":"/",
+    "dir":"../static",
+    "exts":"*",
+    "enbale":true
+}
+```
+
+访问地址`/index.html` 查找`../static/index.html` 如果存在则返回，否则返回`404`
+
+访问地址`/logo.jpg` 查找`../static/logo.jpg` 如果存在则返回，否则返回`404`
+
+访问地址`/logo.png` 查找`../static/logo.jpg` 如果存在则返回，否则返回`404`
+
+... ...
+
+访问地址`/js/main.js` 查找`../static/js/main.js` 如果存在则返回，否则返回`404`
+
+
+
+ + 3. 限制前缀
+
+```json
+{
+    "prefix":"/content",
+    "dir":"../static",
+    "exts":"*",
+    "enbale":true
+}
+```
+
+访问地址`/content/index.html` 查找`../static/index.html` 如果存在则返回，否则返回`404`
+
+访问地址`/content/logo.jpg` 查找`../static/logo.jpg` 如果存在则返回，否则返回`404`
+
+访问地址`/content/logo.png` 查找`../static/logo.jpg` 如果存在则返回，否则返回`404`
+
+访问地址`/content/js/main.js` 查找`../static/js/main.js` 如果存在则返回，否则返回`404`
+
+... ...
+
+访问地址`/index.html` 无法匹配返回`404`
+
+访问地址`/logo.jpg` 无法匹配返回`404`
