修改用户手册

--- a/quickstart/api/3.api_static.md
+++ b/quickstart/api/3.api_static.md
@@ -16,7 +16,7 @@
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
-|prefix|可空|请求路径的前缀名|
+|prefix|必须|请求路径的前缀名|
 |dir|必须|静态文件存放路径|
 |exts|必须|静态文件的扩展名,为`*`则不限制扩展名|
 |enable|可空|true:启用静态文件配置, false:禁用静态文件配置|
