修改用户手册

--- a/quickstart/api/3.api_static.md
+++ b/quickstart/api/3.api_static.md
@@ -39,7 +39,7 @@
 
 ... ...
 
-访问地址`/logo.png` 无法匹配返回`404`
+访问地址`/logo.png` 扩展名无法匹配返回`404`
 
  + 2. 任意扩展名
 
@@ -85,6 +85,6 @@
 
 ... ...
 
-访问地址`/index.html` 无法匹配返回`404`
+访问地址`/index.html` 前缀无法匹配，返回`404`
 
-访问地址`/logo.jpg` 无法匹配返回`404`
+访问地址`/logo.jpg` 前缀无法匹配，返回`404`
