--- a/quickstart/api/4.api_metric.md
+++ b/quickstart/api/4.api_metric.md
@@ -1,6 +1,8 @@
 
 ## metric配置
-配置内容：
+
+本配置适用于所有服务器，配置内容：
+
 ```json
 {
     "enable":true,
@@ -8,16 +10,15 @@
     "host":"http://192.168.0.185:8086",
     "dataBase":"hydrav2",
     "userName":"qyzf",
-    "password":"123456"
-    
+    "password":"123456"    
 }
 ```
-
+每分钟提交一次本地服务器的`QPS`,`请求时长`，`响应信息`，`cpu使用率`,`内存使用率`,`硬盘使用率`等到inflxudb服务器
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
 |enable|可选|是否启用当前配置，未指定是为true|
-|cron|必须|上报周期|
+|cron|必须|提交metric信息的周期|
 |host|必须|influxdb服务地址|
 |dataBase|必须|数据库名称|
 |userName|可选|服务器登录用户名|
