修改用户手册

--- a/quickstart/api/4.api_metric.md
+++ b/quickstart/api/4.api_metric.md
@@ -13,7 +13,7 @@
     "password":"123456"    
 }
 ```
-每分钟提交一次本地服务器的`QPS`,`请求时长`，`响应信息`，`cpu使用率`,`内存使用率`,`硬盘使用率`等到inflxudb服务器
+每分钟提交一次本地服务器的`QPS`,`请求时长`，`响应信息`，`cpu使用率`,`内存使用率`,`硬盘使用率`，`网络连接数`等到inflxudb服务器
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
