--- a/quickstart/api/4.api_metric.md
+++ b/quickstart/api/4.api_metric.md
@@ -1,7 +1,7 @@
 
 ## metric配置
 
-用于定时将服务器的`QPS`,`请求时长`，`响应信息`，`cpu使用率`,`内存使用率`,`硬盘使用率`，`网络连接数`等到inflxudb服务器，本配置适用于所有服务器，配置内容：
+用于定时将服务器的`QPS`,`请求时长`，`响应信息`，`cpu使用率`,`内存使用率`,`硬盘使用率`，`网络连接数`等同步到inflxudb服务器，本配置适用于所有服务器，配置内容：
 
 ```json
 {
