--- a/quickstart/api/4.api_metric.md
+++ b/quickstart/api/4.api_metric.md
@@ -5,20 +5,21 @@
 
 ```json
 {
-    "enable":true,
+   
     "cron":"@every 1m",
     "host":"http://192.168.0.185:8086",
     "dataBase":"hydrav2",
     "userName":"qyzf",
-    "password":"123456"    
+    "password":"123456",
+    "enable":true   
 }
 ```
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
-|enable|可选|是否启用当前配置，未指定是为true|
-|cron|必须|提交metric信息的周期|
+|cron|必须|同步周期|
 |host|必须|influxdb服务地址|
 |dataBase|必须|数据库名称|
 |userName|可选|服务器登录用户名|
 |password|可选|服务器登录密码|
+|enable|可选|是否启用当前配置，未指定是为true|
