修改用户手册

--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -6,7 +6,7 @@
         {
             "name":"/order/:query",
             "engine":"*",
-            "action":"get,post",
+            "action":"get;post",
             "service":"/order/@query",
             "args":"mq=redis"
         }
@@ -23,7 +23,7 @@
 |.routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式。如`/order/request`全字匹配路径为/order/request的请求地址，`/order/:a`,匹配以`/order/`开头的任何路径，并将`:a`的实际值作为变量`@a`保存，当前配置节点的其它参数可用使用`@a`使用该值|
 |.routers.service|必须|服务名称，支持变量翻译|
 |.routers.engine|可选|未指定时为`*`,支持所有引擎|
-|.routers.action|可选| 未指定时只支持`GET`，`POST`,`PUT`,`DELETE`。可选的值有:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用逗号分隔|
+|.routers.action|可选| 未指定时只支持`GET`，`POST`,`PUT`,`DELETE`。可选的值有:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用分号分隔|
 |.routers.args|可选|服务执行所需的配置参数，系统会自动与`.args`合并，以当前的配置覆盖`.args`配置|
 
 ####  1). 路由示例
@@ -48,7 +48,7 @@
     "routers":[
         {
             "name":"/order/query",
-            "action":"GET,POST,PUT,DELETE",
+            "action":"GET;POST;PUT;DELETE",
             "engine":"*",
             "service":"/order/query",
         }
