修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -1,6 +1,6 @@
 ## jwt安全选项
 
-用于设置请求的jwt校验，适用于api,web,rpc服务器，配置如下:
+用于设置`jwt`认证参数，适用于api,web,rpc服务器，配置如下:
 
 ```json
 {
@@ -14,3 +14,11 @@
     }
 }
 ```
+
+|参数名|必须|说明|
+|:------|:-------:|:------|
+|jwt.name|必须|用于服务器读取和设置jwt加密码的`header`或`cookie`名称|
+|jwt.mode|必须|加密模式,如：|
+|jwt.expireAt|必须|超时时长,单位秒|
+|jwt.excludes|可选|排除，不参与jwt密码串验证的页面地址|
+|enable|可选|是否启用当前配置，未指定是为true|
