--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -9,7 +9,7 @@
         "mode":"HS512",
         "secret":"12345678",
         "expireAt":300,
-        "excludes":"/login,/index",
+        "excludes":"/login;/index",
         "enable":true
     }
 }
@@ -20,5 +20,5 @@
 |jwt.name|必须|用于服务器读取和设置`jwt`加密码串的`header`或`cookie`名称|
 |jwt.mode|必须|加密模式,如：`HS256,HS384,HS512,RS256,ES256,ES384,ES512,RS384,RS512,PS256,PS384,PS512`|
 |jwt.expireAt|必须|过期时长,单位秒|
-|jwt.excludes|可选|排除，不参与jwt密码串验证的页面地址|
+|jwt.excludes|可选|排除的页面，不参与jwt密码串验证的页面地址,多个以分号分隔|
 |enable|可选|是否启用当前配置，未指定是为true|
