修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -15,7 +15,7 @@
 }
 ```
 
-除`excludes`指定的`/login`和`/index`地址外，其它任何请求服务器都会首先从`cookie`中查找`name`为`__jwt__`的值，并通过`mode`指定的加密模式`HS512`和`secret`计算签名值`sign`是否匹配，如果匹配则执行服务代码，不匹配则返回`403`错误
+除`excludes`指定的`/login`和`/index`地址外，其它任何请求服务器都会首先从`cookie`中查找`name`为`__jwt__`的值，并通过`mode`指定的加密模式`HS512`和`secret`计算签名值`sign`是否匹配，如果匹配则执行服务代码，不匹配则直接返回`403`错误
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
