--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -15,14 +15,14 @@
 }
 ```
 
-除`excludes`指定的`/login`和`/index`地址外，其它任何请求服务器都会首先从`cookie`中查找`name`为`__jwt__`的值，并通过`mode`指定的加密模式`HS512`和`secret`计算签名值`sign`是否匹配，如果匹配则执行服务代码，不匹配则直接返回`403`错误
+除`excludes`指定的`/login`和`/index`地址外，其它任何请求服务器都会首先从`cookie`中查找`name`为`__jwt__`的值，并通过`mode`指定的加密模式`HS512`和`secret`计算签名值`sign`是否匹配，如果匹配则执行服务代码，不匹配则直接返回`403`错误。
 
 |参数名|必须|说明|
 |:------|:-------:|:------|
 |jwt.name|必须|用于服务器读取和设置`jwt`加密码串的`cookie`名称|
 |jwt.mode|必须|加密模式,如：`HS256,HS384,HS512,RS256,ES256,ES384,ES512,RS384,RS512,PS256,PS384,PS512`|
 |jwt.expireAt|必须|过期时长,单位秒|
-|jwt.excludes|可选|排除的页面，不参与jwt密码串验证的页面地址,多个以分号分隔|
+|jwt.excludes|可选|排除的页面，不参与jwt密码串验证的页面地址，一般用于设置无需授权的页面,多个以分号分隔|
 |enable|可选|是否启用当前配置，未指定是为true|
 
 
