修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -26,3 +26,20 @@
 |enable|可选|是否启用当前配置，未指定是为true|
 
 
+```go
+type LoginHandler struct {
+	container component.IContainer
+}
+
+func NewLoginHandler(container component.IContainer) (u *LoginHandler) {
+	return &LoginHandler{container: container}
+}
+func (u *LoginHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
+	response := context.GetStandardResponse()
+	//检查用户名密码是否正确
+	response.SetJWTBody(userInfo)
+	response.SetContent(200, userInfo)
+	return response, nil
+}
+
+```
