--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -26,6 +26,9 @@
 |enable|可选|是否启用当前配置，未指定是为true|
 
 
+### 设置jwt的值
+
+如用户登录页面，可使用`response.SetJWTBody(loginStateInfo)`设置`jwt`保存的信息
 ```go
 type LoginHandler struct {
 	container component.IContainer
@@ -36,9 +39,12 @@ func NewLoginHandler(container component.IContainer) (u *LoginHandler) {
 }
 func (u *LoginHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
 	response := context.GetStandardResponse()
-	//检查用户名密码是否正确
-	response.SetJWTBody(userInfo)
-	response.SetContent(200, userInfo)
+    
+    //检查用户名密码是否正确
+    
+	response.SetJWTBody(loginStateInfo) //将用户登录信息保存到jwt
+    
+    response.SetContent(200, userInfo)
 	return response, nil
 }
 
