修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -26,9 +26,10 @@
 |enable|可选|是否启用当前配置，未指定是为true|
 
 
-### 设置jwt的值
+## 设置jwt的值
 
 如用户登录页面，可使用`response.SetJWTBody(loginStateInfo)`设置`jwt`保存的信息
+
 ```go
 type LoginHandler struct {
 	container component.IContainer
