修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -26,7 +26,7 @@
 |enable|可选|是否启用当前配置，未指定是为true|
 
 
-## 设置jwt的值
+### 1. 设置jwt的值
 
 如用户登录页面，可使用`response.SetJWTBody(loginStateInfo)`设置`jwt`保存的信息
 
@@ -46,6 +46,21 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
 	response.SetJWTBody(loginStateInfo) //将用户登录信息保存到jwt
     
     response.SetContent(200, userInfo)
+	return response, nil
+}
+
+```
+
+### 2. 获取jwt的值
+
+```go
+
+func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
+	response := context.GetStandardResponse()
+
+	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象
+
+	response.SetContent(200, jwt)
 	return response, nil
 }
 
