修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -58,7 +58,7 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
 func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
 	response := context.GetStandardResponse()
 
-	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象
+	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象，字符串或map
 
 	response.SetContent(200, jwt)
 	return response, nil
