修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -43,13 +43,18 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
     
     //检查用户名密码是否正确
     
-	response.SetJWTBody(loginStateInfo) //将用户登录信息保存到jwt
+	response.SetJWTBody(map[string]interface{}{
+		"id": 11000,
+	}) //将用户登录信息保存到jwt
     
-    response.SetContent(200, userInfo)
+    response.SetContent(200, "success")
 	return response, nil
 }
 
 ```
+
+设置后的值格式如下__jwt__=eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7ImlkIjoxMTAwMH0sImV4cCI6NDUyMDg0MzYzNX0.d0jjCNnMUIVkadY0h99vzwcv_2bZtRnXcQTEO2Qwvt03n4LISfmZ09RuhTmulgkEJnT2plG97Fid12ch-RbQzw
+
 
 ### 2. 获取jwt的值
 
@@ -58,7 +63,7 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
 func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
 	response := context.GetStandardResponse()
 
-	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象，字符串或map
+	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象,值为:map[string]interface{}{"id": 11000}
 
 	response.SetContent(200, jwt)
 	return response, nil
