--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -18,7 +18,7 @@
 ```
 
 加密串类似：
-eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7ImlkIjoxMTAwMH0sImV4cCI6NDUyMDg0MzYzNX0.d0jjCNnMUIVkadY0h99vzwcv_2bZtRnXcQTEO2Qwvt03n4LISfmZ09RuhTmulgkEJnT2plG97Fid12ch-RbQzw
+`eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7ImlkIjoxMTAwMH0sImV4cCI6NDUyMDg0MzYzNX0.d0jjCNnMUIVkadY0h99vzwcv_2bZtRnXcQTEO2Qwvt03n4LISfmZ09RuhTmulgkEJnT2plG97Fid12ch-RbQzw`
 
 除`excludes`指定的`/login`和`/index`地址外，其它任何请求服务器都会首先从`cookie`中查找`name`为`__jwt__`的值，并通过`mode`指定的加密模式`HS512`和`secret`计算签名值`sign`是否匹配，如果匹配则执行服务代码，不匹配则直接返回`403`错误。
 
