修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -58,6 +58,9 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
 
 ```
 
+请求会自动设置cookie:
+`__jwt_=eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7ImlkIjoxMTAwMH0sImV4cCI6NDUyMDg0MzYzNX0.d0jjCNnMUIVkadY0h99vzwcv_2bZtRnXcQTEO2Qwvt03n4LISfmZ09RuhTmulgkEJnT2plG97Fid12ch-RbQzw`
+
 
 
 ### 2. 获取jwt的值
